--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,8 @@
 #Intellij files
 .idea/
 
+# Resources files
+.resources/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
